[package]
name = "baseten-performance-client"
version = "0.0.8"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
baseten_performance_client_core = { path = "../core", default-features = false, features = ["rustls"] }
napi = { version = "2.16", features = ["napi4", "serde-json","tokio_rt"] }
napi-derive = "2.16"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
strip = "symbols"
