[package]
name = "baseten-performance-client"
version = "0.0.12"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
baseten_performance_client_core = { path = "../core", default-features = false, features = ["rustls"] }
napi = { version = "3.4", features = ["napi4", "serde-json","tokio_rt"] }
napi-derive = "3.4"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
napi-build = "2.1"

[profile.release]
lto = true
strip = "symbols"
