[package]
name = "baseten_performance_client"
version = "0.0.12-rc.1"
edition = "2021"

[dependencies]
baseten_performance_client_core = { path = "../core", features = ["native-tls"] }
pyo3 = { version = "0.24", features = ["extension-module", "abi3-py38"] }
numpy = "0.24.0"
ndarray = "*"
pythonize = "*"
pyo3-async-runtimes = { version = "0.24", features = ["tokio-runtime"] }
tokio = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[lib]
name = "baseten_performance_client"
crate-type = ["cdylib", "rlib"]
