[package]
name = "baseten-performance-reverse-proxy"
version = "0.1.0"
edition = "2021"
description = "High-performance reverse proxy for Baseten APIs"
license = "MIT"
repository = "https://github.com/basetenlabs/truss/tree/main/baseten-performance-client"
homepage = "https://github.com/basetenlabs/truss/tree/main/baseten-performance-client"
documentation = "https://github.com/basetenlabs/truss/tree/main/baseten-performance-client"
keywords = ["http", "proxy", "async", "performance", "baseten"]
categories = ["web-programming::http-server", "asynchronous"]

[[bin]]
name = "baseten-reverse-proxy"
path = "src/main.rs"

[dependencies]
baseten_performance_client_core = { path = "../core" }
tokio = { workspace = true, features = ["rt-multi-thread", "net", "macros"] }
axum = { version = "0.7", features = ["http2", "tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.0", features = ["derive"] }
time = { version = "0.3", features = ["formatting", "macros"] }

[dev-dependencies]
tokio-test = "0.4"
futures = "0.3"
tracing-subscriber = { workspace = true }
