[tool.poetry]
name = "truss-common"
version = "0.1.0"
description = ""
authors = ["Bola Malek <bola@baseten.co>"]
readme = "README.md"
packages = [{include = "truss_common"}]

[tool.poetry.dependencies]
python = ">=3.8"
pyyaml = "^6.0"
blake3 = "^0.3.3"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
