[tool.poetry]
name = "truss-server"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

packages = [{include = "truss_server"}]

[tool.poetry.dependencies]
python = ">=3.8"
fastapi = "^0.97.0"
pyyaml = "^6.0"
requests = "^2.31.0"
tenacity = "^8.2.2"
truss-common = {path = "../truss_common", develop=true}
python-json-logger = "^2.0.7"
uvicorn = "^0.22.0"
uvloop = "^0.17.0"
psutil = "^5.9.5"
joblib = "^1.2.0"
msgpack-asgi = "^1.1.0"
msgpack = "^1.0.5"
msgpack-numpy = "^0.4.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
httpx = {extras = ["cli"], version = "^0.24.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
