[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project]
name = "trainers-server"
version = "0.1.0"
description = "Training worker server for the trainers SDK"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "pydantic>=2",
    "httpx",
    "uvicorn",
]

[project.optional-dependencies]
worker = [
    "megatron-bridge",
    "transformers",
    "torch",
    "vllm>=0.9",
]

[tool.uv]
# megatron-bridge's override-dependencies are not propagated by uv (uv issue #13069);
# forward the transformers pin here so the whole dep tree stays within its range.
override-dependencies = [
    "vllm>=0.12.0; sys_platform == 'linux'",
    "transformers>=5.0.0,<=5.3.0",
]

[tool.uv.sources]
megatron-bridge = { path = "vendor/megatron-bridge" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
triton = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
