[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project]
name = "trainers-server"
version = "0.1.0"
description = "Training worker server for the trainers SDK"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi",
    "pydantic>=2",
    "httpx",
    "uvicorn",
]

[project.optional-dependencies]
worker = [
    "megatron-bridge",
    "transformers",
    "torch",
    "vllm>=0.9",
]

[tool.uv]
# megatron-bridge's override-dependencies are not propagated by uv (uv issue #13069);
# forward them all here so the workspace resolver sees them.
prerelease = "allow"
override-dependencies = [
    "vllm>=0.12.0; sys_platform == 'linux'",
    # megatron-bridge constraints forwarded:
    "transformers>=5.0.0,<=5.3.0",
    "mlflow>=3.9.0",
    "cachetools>=5.0.0",
    "cryptography>=43.0.0,<47",
    "nvidia-modelopt>=0.42.0a0",
    "urllib3>=2.6.3",
    "langchain>=0.3.28",
    "langchain-core>=0.3.80",
    "onnx>=1.21.0; python_version < '3.13'",
]

[tool.uv.sources]
megatron-bridge = { path = "vendor/megatron-bridge" }
nvidia-modelopt = { index = "nvidia" }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
triton = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "nvidia"
url = "https://pypi.nvidia.com"
