[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"

[project]
name = "trainers-server"
version = "0.1.0"
description = "Training worker server for the trainers SDK"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pydantic>=2",
    "httpx",
    "requests",
    "uvicorn",
]

[project.optional-dependencies]
worker = [
    "ms-swift",
    "megatron-core",
    "transformer-engine",
    "torch",
    "vllm>=0.9",
]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "torch",
]

[tool.uv]
override-dependencies = [
    "vllm>=0.12.0; sys_platform == 'linux'",
]

[tool.uv.sources]
ms-swift = { path = "vendor/ms-swift" }
megatron-core = { path = "vendor/megatron-lm" }
transformer-engine = { path = "vendor/transformer-engine-stub", editable = true }
torch = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
triton = [
    { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
