[package]
name = "assigner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "assigner"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1.39", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
